src/main/resources/src/style/components/recipebook.sass
// RecipeBook - An Introduction to Databases exercise project with Java Spark and React.
// Copyright (C) 2017  Maunium

// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.

// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
.recipebook
	position: fixed
	top: 0
	bottom: 0
	left: calc((100% - #{$width}) / 2)
	right: calc((100% - #{$width}) / 2)
	color: $text-color

	header
		display: flex

		background-color: $main-color
		border-radius: 0 0 .25rem .25rem
		height: $header-height
		box-sizing: border-box
		padding: .5rem

		.title
			align-self: center
			text-align: center
			width: calc(100% - 4rem)
			color: $inverted-text-color
			font-weight: bold
			font-size: 1.5rem

		.back
			padding: 0
			font-size: 0

			&.hidden
				display: none

			svg
				width: 2rem
				height: 2rem

	.recipebook-list
		top: $header-height
		bottom: 5.375rem
		width: 100%
		position: absolute
		overflow-y: auto

	footer
		position: absolute
		bottom: 0
		left: 0
		right: 0

		button
			width: 100%
			font-weight: bold
			padding: .75rem
			border-radius: 0
			&:first-of-type
				border-radius: .25rem .25rem 0 0

